--- a/app/src/components/hero/Hero.css
+++ b/app/src/components/hero/Hero.css
@@ -2,11 +2,15 @@
   color: #fff;
   position: relative;
   padding-bottom: 2rem;
-  background-color: var(--black);
 }
 .hero-container {
   justify-content: space-between;
   align-items: flex-end;
+
+}
+.hero-left{
+  margin-left: 5.5rem;
+  margin-top: 1rem;
 }
 /* Left Side  */
 .hero-title {
@@ -21,7 +25,7 @@
   line-height: 4rem;
 }
 .hero-desc{
-    padding-block: 30px;
+    padding-block: 25px;
     font-size: 1.1rem;
 }
 .orange-circle {
@@ -38,7 +42,7 @@
     background: white;
     border-radius: 5px;
     border: 3px solid rgba(120,120,120,0.374);
-    padding: 0.5rem 1.5rem;
+    padding: 0.5rem 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -69,6 +73,8 @@ margin-block: 30px;
 /* Right Side  */
 
 .image-container {
+  margin-right: 5rem;
+  margin-bottom: 1rem;
   width: 30rem;
   height: 35rem;
   overflow: hidden;
