--- a/app/src/components/Residencies/Residencies.css
+++ b/app/src/components/Residencies/Residencies.css
@@ -1,64 +1,96 @@
 .r-container {
   overflow: hidden;
   position: relative;
-/* } */
-.r-head {
-  margin: 2rem;
-}
-.r-card {
+
+  .r-head {
+    margin: 2rem;
+  }
+  .r-card {
     position: relative;
-  gap: 0.6rem;
-  padding: 1rem;
-  border-radius: 10px;
-  max-width: max-content;
-  margin: auto;
-  transition: all 300ms ease-in;
-  padding: 1rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-.r-card img {
-  width: 100%;
-  max-width: 16rem;
-  border-radius: 1.5rem;
-}
-.r-card > :nth-child(2) {
-  font-size: 1.2rem;
-  font-weight: 600;
-}
-.r-card > :nth-child(3) {
-  font-size: 1.5rem;
-}
-.r-card > :nth-child(4) {
-  font-size: 0.7rem;
-  width: 15rem;
-}
-.r-card:hover {
-  transform: scale(1.025);
-  cursor: pointer;
-  background: linear-gradient(
-    180deg,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(136, 160, 255, 0.46) 217.91%
-  );
-  border-radius: 1.5rem;
+    gap: 0.6rem;
+    padding: 1rem;
+    border-radius: 10px;
+    max-width: max-content;
+    margin: auto;
+    transition: all 300ms ease-in;
+    padding: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+  .r-card img {
+    width: 100%;
+    max-width: 16rem;
+    border-radius: 1.5rem;
+  }
+  .r-card > :nth-child(2) {
+    font-size: 1.2rem;
+    font-weight: 600;
+  }
+  .r-card > :nth-child(3) {
+    font-size: 1.5rem;
+  }
+  .r-card > :nth-child(4) {
+    font-size: 0.7rem;
+    width: 15rem;
+  }
+  .r-card:hover {
+    transform: scale(1.025);
+    cursor: pointer;
+    background: linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(136, 160, 255, 0.46) 217.91%
+    );
+    border-radius: 1.5rem;
 
-  box-shadow: 0px 72px 49px -51px rgba(136, 160, 255, 0.21);
-}
+    box-shadow: 0px 72px 49px -51px rgba(136, 160, 255, 0.21);
+  }
 
-.swiper-horizontal {
-  overflow: visible; 
-}
+  .swiper-horizontal {
+    overflow: visible;
+  }
 
-.r-buttons {
-  position: absolute;
-  gap: 1rem;
-    top: -4rem;
+  .r-buttons {
+    position: absolute;
+    gap: 1rem;
+    top: -5rem;
     right: 2rem;
-    z-index: 20000000;
-  display: flex;
-}
-.r-buttons button {
-  padding: 5px 10px;
-  font-size: 28px;
+    display: flex;
+  }
+  .r-buttons button {
+    width: 40px;
+    height: 40px;
+    font-size: 1.5rem;
+    border: none;
+    outline: none;
+    color: var(--blue);
+    background: white;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: all 0.1s ease-in;
+    z-index: 8799898;
+  }
+  .r-buttons button:active {
+    scale: 0.5;
+  }
+  .r-buttons button:disabled:active {
+    scale: 1;
+  }
+  .r-buttons button:nth-child(1):disabled {
+    color: gray;
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
+  .r-buttons button:nth-child(2):disabled {
+    scale: 0.95;
+    color: gray;
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
+  .r-buttons button:nth-child(1) {
+    background-color: #eeeeff;
+  }
+  .r-buttons button:nth-child(2) {
+    box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.25);
+  }
 }
