--- a/app/src/components/header/Header.css
+++ b/app/src/components/header/Header.css
@@ -1,37 +1,63 @@
-.h-wrapper{
-    color: #fff;
+.h-wrapper {
+  color: #fff;
 }
-.h-container{
-    padding-top: 1rem;
-    padding-bottom:1rem ;
-    padding-inline: 1rem;
-    color: var(--secondary);
+.h-container {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-inline: 1rem;
+  color: var(--secondary);
 }
-.h-menu{
+.h-menu {
+  gap: 2rem;
+}
+.h-menu a {
+  position: relative;
+}
+.h-menu a:hover {
+  color: #fff;
+  font-weight: 400;
+  transition: all 0.3s ease-in;
+}
+.h-menu a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -4px;
+  width: 100%;
+  height: 1px;
+  border-radius: 50px;
+  background-color: #fff;
+  transition: width 0.4s, transform 0.4s;
+  transform-origin: right;
+  transform: scaleX(0);
+}
+.h-menu a:hover::after {
+  transform-origin: left;
+  transform: scaleX(1);
+}
+.menu-icon {
+  display: none;
+}
+@media (max-width: 768px) {
+  .menu-icon {
+    display: block;
+  }
+  .h-menu {
+color: var(--black);
+position: absolute;
+top: 3rem;
+right: 4rem;
+background: white;
+flex-direction: column;
 gap: 2rem;
-}
-.h-menu a{
-    position: relative;
-}
-.h-menu a:hover{
-    color: #fff;
-    font-weight: 400;
-    transition: all 0.3s ease-in;
-}
-.h-menu a::after{
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -4px;
-    width: 100%;
-    height:1px;
-    border-radius: 50px;
-    background-color: #fff;
-    transition: width 0.4s , transform 0.4s;
-    transform-origin:right;
-    transform: scaleX(0);
-}
-.h-menu a:hover::after{
-    transform-origin: left;
-    transform: scaleX(1);
+padding: 3rem;
+font-weight: 500;
+border-radius: 10px;
+align-items: flex-start;
+box-shadow: 0px 4px 4px rgba(0,0,0,0.05);
+z-index: 99;
+  }
+  .h-menu button {
+    margin-bottom: auto;
+  }
 }
